<resources>
    <string name="app_name">Voci Trainer</string>
    <string name="Sprache">Sprache</string>
    <string name="Fremdwort">Fremdwort</string>
    <string name="Antwort1">Antwort1</string>
    <string name="Antwort2">Antwort2</string>
    <string name="Antwort3">Antwort3</string>
    <string name="Antwort4">Antwort4</string>
    <string name="Deutsch">Deutsch</string>
    <string name="English">English</string>
    <string name="DE_EN">DE -> EN</string>
    <string name="EN_DE">EN -> DE</string>
    <string name="App_Sprache">App-Sprache</string>
    <string name="Lernrichtung">Lernrichtung</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="hint_German_word">Deutsche Übersetzung (Wort)</string>
    <string name="hint_English_word">Englische Übersetzung (Word)</string>
    <string name="button_save">Speichern</string>
    <string name="button_reset">Voci zurücksetzen</string>
    <string name="highscore">Rekord-Liste</string>
    <string name="empty_not_saved">Fehler: nicht gespeichert</string>
    <string name="add_word">Wort hinzufügen</string>
    <string name="word_added">Wort hinzugefügt</string>
    <string name="close">Schliessen</string>
    <string name="enter_highscore">Speichern</string>
    <string name="save_highscore">Resultat speichern</string>
    <string name="firstName">Vorname</string>
    <string name="lastName">Nachname</string>
    <string name="choose_cat">Kategorie wählen</string>
    <string name="cat1">Berufe</string>
    <string name="cat2">Familie</string>
    <string name="cat3">Essen</string>
    <string name="cat4">Test-Umgebung</string>
    <string name="category">Kategorie</string>
    <string name="Punktzahl">Punktzahl</string>
    <string name="Punkte">erziehlte Punkte</string>
    <string name="choose_Language">Sprache auswählen</string>
    <string name="Reset_Highscore">Resultate löschen</string>
    <string name="accepted">Änderung gespeichert</string>
    <string name="highscore_saved">Highscore gespeichert</string>

</resources>