<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006699"
    tools:context=".ActivityChangeCategory">

    <Button
        android:id="@+id/category1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/cat1"
        app:layout_constraintBottom_toTopOf="@+id/category2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/category2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/cat2"
        app:layout_constraintBottom_toTopOf="@+id/category3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/category3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/cat3"
        app:layout_constraintBottom_toTopOf="@+id/category4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/category4"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/cat4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>